# keyphrase-data-labelling-with-openai-api

./: .gitignore  README.md  data.dvc  generate_labels.ipynb  load_data_from_db.ipynb  preprocess.ipynb  prompt_engineering.ipynb  pyproject.toml  test.ipynb
