[tool.poetry]
name = "open-ai-api-test"
version = "0.1.0"
description = ""
authors = ["Jeonghyeon Park <dotsnangles@gmail.com>"]
readme = "README.md"
packages = [{include = "open_ai_api_test"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.6.3"
ipywidgets = "^8.0.6"
openai = "^0.27.4"
pandas = "^1.5.3"
numpy = "^1.24.2"
python-dotenv = "^1.0.0"
black = "^23.3.0"
pymysql = "^1.0.3"
sshtunnel = "^0.4.0"
torch = "^1.13.1"
transformers = "^4.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
